<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotActivity"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:id="@+id/forgot_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/forgot_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp">

        <TextView
            android:id="@+id/tv_forgot_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="318dp"
            tools:layout_editor_absoluteY="14dp" />

        <TextView
            android:id="@+id/tv_forgot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_restore"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="14dp" />

    </androidx.appcompat.widget.Toolbar>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="263dp"
        android:layout_marginBottom="364dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_floatingLabel="highlight"
        app:met_iconLeft="@drawable/email"
        app:met_iconPadding="16dp" />

    <com.andexert.library.RippleView
        android:id="@+id/rippleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="523dp"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password" />

    </com.andexert.library.RippleView>

    <TextView
        android:id="@+id/tv_forgot_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_1_type_your_email_in_n_2_hit_quot_reset_password_quot_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forgot_toolbar"
        app:layout_constraintVertical_bias="0.229" />

</androidx.constraintlayout.widget.ConstraintLayout>
